src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__acosh.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc()]\nfn acosh(a: f64) -> Result<f64, EvalError> {\n    if a < 1.0 {\n        return Err(\n            EvalError::OutOfDomain(\n                DomainLimit::Inclusive(1),\n                DomainLimit::None,\n                \"acosh\".into(),\n            ),\n        );\n    }\n    Ok(a.acosh())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Acosh;
impl crate::func::EagerUnaryFunc for Acosh {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        acosh(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Acosh {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(acosh))
    }
}
fn acosh(a: f64) -> Result<f64, EvalError> {
    if a < 1.0 {
        return Err(
            EvalError::OutOfDomain(
                DomainLimit::Inclusive(1),
                DomainLimit::None,
                "acosh".into(),
            ),
        );
    }
    Ok(a.acosh())
}
