src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cast_float64_to_float32.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(\n    sqlname = \"double_to_real\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastFloat32ToFloat64),\n    is_monotone = true\n)]\nfn cast_float64_to_float32(a: f64) -> Result<f32, EvalError> {\n    #[allow(clippy::as_conversions)]\n    let result = a as f32;\n    if result.is_infinite() && !a.is_infinite() {\n        Err(EvalError::FloatOverflow)\n    } else if result == 0.0 && a != 0.0 {\n        Err(EvalError::FloatUnderflow)\n    } else {\n        Ok(result)\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastFloat64ToFloat32;
impl crate::func::EagerUnaryFunc for CastFloat64ToFloat32 {
    type Input<'a> = f64;
    type Output<'a> = Result<f32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_float64_to_float32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastFloat32ToFloat64)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastFloat64ToFloat32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("double_to_real")
    }
}
fn cast_float64_to_float32(a: f64) -> Result<f32, EvalError> {
    #[allow(clippy::as_conversions)]
    let result = a as f32;
    if result.is_infinite() && !a.is_infinite() {
        Err(EvalError::FloatOverflow)
    } else if result == 0.0 && a != 0.0 {
        Err(EvalError::FloatUnderflow)
    } else {
        Ok(result)
    }
}
